feat: core function for kpi tracking