@@ -1,17 +1,25 @@
 package com.kpitracking.security;
 
+import com.kpitracking.entity.OrgUnit;
+import com.kpitracking.entity.RolePermission;
 import com.kpitracking.entity.UserRoleOrgUnit;
+import com.kpitracking.repository.OrgUnitRepository;
 import com.kpitracking.repository.RolePermissionRepository;
 import com.kpitracking.repository.UserRoleOrgUnitRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Centralized permission checker for service-level authorization.
- * Replaces all hasRole/hasAnyRole checks with permission-based logic.
+ * 100% permission-based — NO hardcoded role names.
+ * 
+ * Key design:
+ * - isGlobalAdmin() checks for SYSTEM:ADMIN permission at the root unit.
+ * - hasPermissionInOrgUnit() supports hierarchy inheritance and scope-aware SYSTEM:ADMIN.
+ * - All role names are user-defined and dynamic.
  */
 @Component
 @RequiredArgsConstructor
@@ -19,82 +27,119 @@ public class PermissionChecker {
 
     private final UserRoleOrgUnitRepository userRoleOrgUnitRepository;
     private final RolePermissionRepository rolePermissionRepository;
+    private final OrgUnitRepository orgUnitRepository;
+
+    /**
+     * Internal helper to fetch assignments and their associated permission codes.
+     */
+    private Map<UUID, Set<String>> getPermissionsByRole(List<UserRoleOrgUnit> assignments) {
+        Set<UUID> roleIds = assignments.stream()
+                .map(a -> a.getRole().getId())
+                .collect(Collectors.toSet());
+        
+        if (roleIds.isEmpty()) return Collections.emptyMap();
+        
+        List<RolePermission> rolePermissions = rolePermissionRepository.findByRoleIdIn(roleIds);
+        
+        return rolePermissions.stream()
+                .collect(Collectors.groupingBy(
+                        rp -> rp.getRole().getId(),
+                        Collectors.mapping(rp -> rp.getPermission().getCode(), Collectors.toSet())
+                ));
+    }
 
     /**
      * Check if a user has a specific permission code (e.g. "KPI:APPROVE") globally.
+     * This checks if ANY assigned role has the permission.
      */
     public boolean hasPermission(UUID userId, String permissionCode) {
         List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
+        Map<UUID, Set<String>> rolePerms = getPermissionsByRole(assignments);
+
         return assignments.stream()
-                .map(UserRoleOrgUnit::getRole)
+                .map(a -> a.getRole().getId())
                 .distinct()
-                .flatMap(role -> rolePermissionRepository.findByRoleId(role.getId()).stream())
-                .anyMatch(rp -> rp.getPermission().getCode().equals(permissionCode));
+                .anyMatch(roleId -> {
+                    Set<String> perms = rolePerms.getOrDefault(roleId, Collections.emptySet());
+                    return perms.contains(permissionCode) || perms.contains("SYSTEM:ADMIN");
+                });
     }
 
     /**
      * Check if a user has a specific permission code for a specific OrgUnit.
-     * This includes global roles (where OrgUnit is irrelevant) and roles assigned to that OrgUnit or its parents.
+     * Supports inheritance: permission in a parent unit applies to all child units.
+     * SYSTEM:ADMIN permission acts as a super-permission within its scope (unit + children).
      */
     public boolean hasPermissionInOrgUnit(UUID userId, String permissionCode, UUID orgUnitId) {
         List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
-        
-        // 1. Check if user has global permission (e.g. Director) or permission in this specific OrgUnit
+        if (assignments.isEmpty()) return false;
+
+        OrgUnit targetUnit = orgUnitRepository.findById(orgUnitId).orElse(null);
+        if (targetUnit == null) return false;
+
+        Map<UUID, Set<String>> rolePerms = getPermissionsByRole(assignments);
+
         return assignments.stream()
-                .filter(assignment -> {
-                    // Global roles (like DIRECTOR/ADMIN) might be assigned to a root org unit or have special handling.
-                    // For now, we check if the role is assigned to the specific OrgUnit OR the user has the permission in any assignment.
-                    // Actually, if they have DIRECTOR role anywhere, they usually have global permissions.
-                    if (assignment.getRole().getName().equals("DIRECTOR") || assignment.getRole().getName().equals("ADMIN")) {
-                        return true;
-                    }
-                    return assignment.getOrgUnit().getId().equals(orgUnitId);
-                })
-                .map(UserRoleOrgUnit::getRole)
-                .distinct()
-                .flatMap(role -> rolePermissionRepository.findByRoleId(role.getId()).stream())
-                .anyMatch(rp -> rp.getPermission().getCode().equals(permissionCode));
+                .filter(a -> targetUnit.getPath().startsWith(a.getOrgUnit().getPath())) // Target is in subtree of assignment
+                .anyMatch(a -> {
+                    Set<String> perms = rolePerms.getOrDefault(a.getRole().getId(), Collections.emptySet());
+                    return perms.contains(permissionCode) || perms.contains("SYSTEM:ADMIN");
+                });
     }
 
     /**
-     * Check if a user has any of the given permission codes.
+     * Check if a user has any of the given permission codes globally.
      */
     public boolean hasAnyPermission(UUID userId, String... permissionCodes) {
-        List<String> codes = List.of(permissionCodes);
         List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
+        if (assignments.isEmpty()) return false;
+
+        Map<UUID, Set<String>> rolePerms = getPermissionsByRole(assignments);
+        Set<String> targetCodes = Set.of(permissionCodes);
+
         return assignments.stream()
-                .map(UserRoleOrgUnit::getRole)
+                .map(a -> a.getRole().getId())
                 .distinct()
-                .flatMap(role -> rolePermissionRepository.findByRoleId(role.getId()).stream())
-                .anyMatch(rp -> codes.contains(rp.getPermission().getCode()));
+                .anyMatch(roleId -> {
+                    Set<String> perms = rolePerms.getOrDefault(roleId, Collections.emptySet());
+                    if (perms.contains("SYSTEM:ADMIN")) return true;
+                    return perms.stream().anyMatch(targetCodes::contains);
+                });
     }
 
     /**
-     * Check if user is a Director or Admin (Global access).
+     * Check if user has global admin access (SYSTEM:ADMIN permission at the root unit).
      */
     public boolean isGlobalAdmin(UUID userId) {
         List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
+        if (assignments.isEmpty()) return false;
+
+        Map<UUID, Set<String>> rolePerms = getPermissionsByRole(assignments);
+
         return assignments.stream()
-                .anyMatch(a -> a.getRole().getName().equals("DIRECTOR") || a.getRole().getName().equals("ADMIN"));
+                .filter(a -> a.getOrgUnit().getParent() == null) // Root unit only
+                .anyMatch(a -> {
+                    Set<String> perms = rolePerms.getOrDefault(a.getRole().getId(), Collections.emptySet());
+                    return perms.contains("SYSTEM:ADMIN");
+                });
     }
 
     /**
-     * Get list of all OrgUnit IDs where the user has a specific permission, including sub-units.
+     * Get list of all OrgUnit IDs where the user has a specific permission.
+     * This returns the "base" units where the permission is explicitly assigned.
+     * Callers should handle sub-unit logic (e.g. via path LIKE) if needed.
      */
     public List<UUID> getEffectiveOrgUnitsWithPermission(UUID userId, String permissionCode) {
         List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
-        List<String> allowedPaths = assignments.stream()
-                .filter(a -> rolePermissionRepository.findByRoleId(a.getRole().getId()).stream()
-                        .anyMatch(rp -> rp.getPermission().getCode().equals(permissionCode)))
-                .map(a -> a.getOrgUnit().getPath())
-                .distinct()
-                .toList();
-        
-        if (allowedPaths.isEmpty()) return List.of();
+        if (assignments.isEmpty()) return Collections.emptyList();
+
+        Map<UUID, Set<String>> rolePerms = getPermissionsByRole(assignments);
 
         return assignments.stream()
-                .filter(a -> rolePermissionRepository.findByRoleId(a.getRole().getId()).stream()
-                        .anyMatch(rp -> rp.getPermission().getCode().equals(permissionCode)))
+                .filter(a -> {
+                    Set<String> perms = rolePerms.getOrDefault(a.getRole().getId(), Collections.emptySet());
+                    return perms.contains(permissionCode) || perms.contains("SYSTEM:ADMIN");
+                })
                 .map(a -> a.getOrgUnit().getId())
                 .distinct()
                 .toList();
@@ -102,11 +147,5 @@ public class PermissionChecker {
 
     public List<UUID> getOrgUnitsWithPermission(UUID userId, String permissionCode) {
         return getEffectiveOrgUnitsWithPermission(userId, permissionCode);
-    }
-
-    public boolean hasRole(UUID userId, String roleName) {
-        List<UserRoleOrgUnit> assignments = userRoleOrgUnitRepository.findByUserId(userId);
-        return assignments.stream()
-                .anyMatch(a -> a.getRole().getName().equals(roleName));
     }
 }
